Add save button.

--- a/todo.html
+++ b/todo.html
@@ -44,6 +44,7 @@
 
     <div style="border: 1px dashed red; width:100%">
         <input type="button" id="editButton" value="Edit this file">
+        <input type="button" id="saveButton" value="Save this file">
         <div style="width:100%; display:table">
             <input type="button" id="evalButton" value="Evaluate:" style="display:table-cell;">
             <input type="text" id="statement" value="Date.parse('today').toString()" style="display:table-cell; width:85%" />
