--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0004 by wonsungi</title>
+    <title>todo.html v0.00.0005 by wonsungi</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -17,7 +17,7 @@
 <body>
     <div id="appDiv">
         <div id="outputDiv" style="width:95%; height:95%; margin-left: auto; margin-right: auto; margin-top: 8px;" >
-            <textarea id=output style="width: 99%; height: 99%" >todo.html v0.00.0004 by wonsungi</textarea>
+            <textarea id=output style="width: 99%; height: 99%" ></textarea>
         </div>
         <div style="width:95%; height:5%; margin-left: auto; margin-right: auto;">
             <form id='commandLine' style="width:100%">
@@ -403,6 +403,8 @@
         // Run on document load
         jQuery(function() {
             var $ = jQuery; // local alias
+
+            $('#output').text(document.title);
 
             // Input textarea gets the default focus
             $('#statement').focus();
