Add help actions (h + help)

--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0006 by wonsungi</title>
+    <title>todo.html v0.00.0008 by wonsungi</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -15,6 +15,184 @@
     </style>
 </head>
 <body>
+    <div id='usage'>Usage: [-fhpantvV] [-d todo_config] action [task_number] [task_description]</div>
+    <div id='shorthelp'>Actions:
+  add|a "THING I NEED TO DO +project @context"
+  addto DEST "TEXT TO ADD"
+  addm "THINGS I NEED TO DO
+        MORE THINGS I NEED TO DO"
+  append|app ITEM# "TEXT TO APPEND"
+  archive
+  command [ACTIONS]
+  del|rm ITEM# [TERM]
+  dp|depri ITEM#[, ITEM#, ITEM#, ...]
+  do ITEM#[, ITEM#, ITEM#, ...]
+  help
+  list|ls [TERM...]
+  listall|lsa [TERM...]
+  listcon|lsc
+  listfile|lf SRC [TERM...]
+  listpri|lsp [PRIORITY]
+  listproj|lsprj
+  move|mv ITEM# DEST [SRC]
+  prepend|prep ITEM# "TEXT TO PREPEND"
+  pri|p ITEM# PRIORITY
+  replace ITEM# "UPDATED TODO"
+  report
+
+See "help" for more details.</div>
+
+<div id=help>
+Actions:
+  add "THING I NEED TO DO +project @context"
+  a "THING I NEED TO DO +project @context"
+    Adds THING I NEED TO DO to your todo.txt file on its own line.
+    Project and context notation optional.
+    Quotes optional.
+
+  addm "FIRST THING I NEED TO DO +project1 @context
+  SECOND THING I NEED TO DO +project2 @context"
+    Adds FIRST THING I NEED TO DO to your todo.txt on its own line and
+    Adds SECOND THING I NEED TO DO to you todo.txt on its own line.
+    Project and context notation optional.
+    Quotes optional.
+
+  addto DEST "TEXT TO ADD"
+    Adds a line of text to any file located in the todo.txt directory.
+    For example, addto inbox.txt "decide about vacation"
+
+  append ITEM# "TEXT TO APPEND"
+  app ITEM# "TEXT TO APPEND"
+    Adds TEXT TO APPEND to the end of the task on line ITEM#.
+    Quotes optional.
+
+  archive
+    Moves all done tasks from todo.txt to done.txt and removes blank lines.
+
+  command [ACTIONS]
+    Runs the remaining arguments using only todo.sh builtins.
+    Will not call any .todo.actions.d scripts.
+
+  del ITEM# [TERM]
+  rm ITEM# [TERM]
+    Deletes the task on line ITEM# in todo.txt.
+    If TERM specified, deletes only TERM from the task.
+
+  depri ITEM#[, ITEM#, ITEM#, ...]
+  dp ITEM#[, ITEM#, ITEM#, ...]
+    Deprioritizes (removes the priority) from the task(s)
+    on line ITEM# in todo.txt.
+
+  do ITEM#[, ITEM#, ITEM#, ...]
+    Marks task(s) on line ITEM# as done in todo.txt.
+
+  help
+    Display this help message.
+
+  list [TERM...]
+  ls [TERM...]
+    Displays all tasks that contain TERM(s) sorted by priority with line
+    numbers.  If no TERM specified, lists entire todo.txt.
+
+  listall [TERM...]
+  lsa [TERM...]
+    Displays all the lines in todo.txt AND done.txt that contain TERM(s)
+    sorted by priority with line  numbers.  If no TERM specified, lists
+    entire todo.txt AND done.txt concatenated and sorted.
+
+  listcon
+  lsc
+    Lists all the task contexts that start with the @ sign in todo.txt.
+
+  listfile SRC [TERM...]
+  lf SRC [TERM...]
+    Displays all the lines in SRC file located in the todo.txt directory,
+    sorted by priority with line  numbers.  If TERM specified, lists
+    all lines that contain TERM in SRC file.
+
+  listpri [PRIORITY]
+  lsp [PRIORITY]
+    Displays all tasks prioritized PRIORITY.
+    If no PRIORITY specified, lists all prioritized tasks.
+
+  listproj
+  lsprj
+    Lists all the projects that start with the + sign in todo.txt.
+
+  move ITEM# DEST [SRC]
+  mv ITEM# DEST [SRC]
+    Moves a line from source text file (SRC) to destination text file (DEST).
+    Both source and destination file must be located in the directory defined
+    in the configuration directory.  When SRC is not defined
+    it's by default todo.txt.
+
+  prepend ITEM# "TEXT TO PREPEND"
+  prep ITEM# "TEXT TO PREPEND"
+    Adds TEXT TO PREPEND to the beginning of the task on line ITEM#.
+    Quotes optional.
+
+  pri ITEM# PRIORITY
+  p ITEM# PRIORITY
+    Adds PRIORITY to task on line ITEM#.  If the task is already
+    prioritized, replaces current priority with new PRIORITY.
+    PRIORITY must be an uppercase letter between A and Z.
+
+  replace ITEM# "UPDATED TODO"
+    Replaces task on line ITEM# with UPDATED TODO.
+
+  report
+    Adds the number of open tasks and done tasks to report.txt.
+
+
+
+Options:
+  -@
+      Hide context names in list output. Use twice to show context
+      names (default).
+  -+
+      Hide project names in list output. Use twice to show project
+      names (default).
+  -d CONFIG_FILE
+      Use a configuration file other than the default ~/.todo/config
+  -f
+      Forces actions without confirmation or interactive input
+  -h
+      Display a short help message
+  -p
+      Plain mode turns off colors
+  -P
+      Hide priority labels in list output. Use twice to show
+      priority labels (default).
+  -a
+      Don't auto-archive tasks automatically on completion
+  -n
+      Don't preserve line numbers; automatically remove blank lines
+      on task deletion
+  -t
+      Prepend the current date to a task automatically
+      when it's added.
+  -v
+      Verbose mode turns on confirmation messages
+  -vv
+      Extra verbose mode prints some debugging information
+  -V
+      Displays version, license and credits
+  -x
+      Disables TODOTXT_FINAL_FILTER
+
+
+Environment variables:
+  TODOTXT_AUTO_ARCHIVE=0          is same as option -a
+  TODOTXT_CFG_FILE=CONFIG_FILE    is same as option -d CONFIG_FILE
+  TODOTXT_FORCE=1                 is same as option -f
+  TODOTXT_PRESERVE_LINE_NUMBERS=0 is same as option -n
+  TODOTXT_PLAIN=1                 is same as option -p
+  TODOTXT_DATE_ON_ADD=1           is same as option -t
+  TODOTXT_VERBOSE=1               is same as option -v
+  TODOTXT_DEFAULT_ACTION=""       run this when called with no arguments
+  TODOTXT_SORT_COMMAND="sort ..." customize list output
+  TODOTXT_FINAL_FILTER="sed ..."  customize list after color, P@+ hiding</div>
+
     <div id="appDiv">
         <div id="outputDiv" style="width:95%; height:95%; margin-left: auto; margin-right: auto; margin-top: 8px;" >
             <textarea id=output style="width: 99%; height: 99%" ></textarea>
@@ -380,6 +558,12 @@
     <script type="text/javascript">
         var DEBUG = false;
 
+        function doHelp(id)
+        {
+            return $('#' + id).text();
+        }
+
+
         function doJavaScript(jsString)
         {
             var results = "";
@@ -414,7 +598,11 @@
                          'args      = ' + args +   '\n';
             }
 
-            if (action == "js" || action == "j") {
+            if (action == "h") {
+                result += doHelp('usage') + '\n\n' + doHelp('shorthelp');
+            } else if (action == "help") {
+                result += doHelp('usage') + '\n\n' + doHelp('help');
+            } else if (action == "js" || action == "j") {
                 result += doJavaScript(args);
             } else {
                 // default to JavaScript
@@ -428,7 +616,7 @@
         jQuery(function() {
             var $ = jQuery; // local alias
 
-            $('#output').text(document.title + '\n');
+            $('#output').text(document.title + '\n\n' + doHelp('usage') + '\n');
 
             // Input textarea gets the default focus
             $('#statement').focus();
