--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0008 by wonsungi</title>
+    <title>todo.html v0.00.0009 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
