--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0009 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0010 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -602,6 +602,8 @@ Environment variables:
                 result += doHelp('usage') + '\n\n' + doHelp('shorthelp');
             } else if (action == "help") {
                 result += doHelp('usage') + '\n\n' + doHelp('help');
+            } else if (action == "clear" || action == "clr" || action == "c") {
+                $('#output').text("");
             } else if (action == "js" || action == "j") {
                 result += doJavaScript(args);
             } else {
