--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0011 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0018 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -11,6 +11,32 @@
             width: 100%;
             height: 100%;
             background: blue;
+        }
+
+        #outputDiv, #commandDiv {
+            position: absolute;
+            width: 96%;
+            left: 2%;
+            right: 98%;
+        }
+
+        #outputDiv {
+            top: 8px;
+            bottom: 35px;
+        }
+
+        #commandDiv {
+            bottom: 8px;
+            height: 16px;
+        }
+
+        #output, #statement {
+            width: 100%;
+            height: 100%;
+        }
+
+        #usage, #shorthelp, #help {
+            position: fixed;  // suppress scroll bars
         }
     </style>
 </head>
@@ -194,13 +220,11 @@ Environment variables:
   TODOTXT_FINAL_FILTER="sed ..."  customize list after color, P@+ hiding</div>
 
     <div id="appDiv">
-        <div id="outputDiv" style="width:95%; height:95%; margin-left: auto; margin-right: auto; margin-top: 8px;" >
-            <textarea id=output style="width: 99%; height: 99%" ></textarea>
+        <div id="outputDiv" >
+            <textarea id=output ></textarea>
         </div>
-        <div style="width:95%; height:5%; margin-left: auto; margin-right: auto;">
-            <form id='commandLine' style="width:100%">
-                <input type="textarea" id="statement" value="Date.parse('today')" style="width:99%" />
-            </form>
+        <div id="commandDiv" >
+            <textarea id=statement ></textarea>
         </div>
     </div>
 
@@ -625,8 +649,9 @@ Environment variables:
 
             // Execute the statement in the "statement" text input
             // when [Enter] is pressed.
-            $('#commandLine').submit(function(e) {
-                e.preventDefault();
+            $('#statement').keypress(function(e) {
+                // if not [return] key use default handler:
+                if (e.which != 13) return true;
 
                 var outputEl = $('#output');
 
