--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0018 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0022 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -641,7 +641,43 @@ Environment variables:
         jQuery(function() {
             var $ = jQuery; // local alias
 
-            $('#output').text(document.title + '\n\n' + doHelp('usage') + '\n');
+            // Calculate how tall the textarea font is with a dummy textarea
+            var lineHeight = function () {
+                var ta = $('<textarea rows=1 id=removeme></textarea>');
+                $('body').append(ta);
+
+                var oldHeight = ta[0].scrollHeight;
+                ta.val('\n');
+                var newHeight = ta[0].scrollHeight;
+
+                $('#removeme').empty();
+                return newHeight - oldHeight;
+            }();
+
+            // Number of newlines in padding string. Automatically updated
+            // when padding() constructs padding string.
+            var paddingLines = 0;
+
+            // Returns string of newlines used to force #output textarea's
+            // scrollHeight to increase when a line is added. Also allows
+            // scrolling text to top even if textarea is not filled, yet.
+
+            // Computes a new string every time, in case the textarea was
+            // resized.
+            var padding = function() {
+                var ret = "";
+                var paddingHeight = $('#output')[0].clientHeight;
+
+                paddingLines = Math.ceil(paddingHeight / lineHeight);
+
+                for (var i = 0; i < paddingLines; i++) {
+                    ret += '\n';
+                }
+                return ret;
+            };
+
+            $('#output').text(document.title + '\n\n' +
+                              doHelp('usage') + '\n' + padding());
 
             // Input textarea gets the default focus
             $('#statement').focus();
@@ -654,12 +690,31 @@ Environment variables:
 
                 var outputEl = $('#output');
 
-                var statement = $('#statement').val();
-                outputEl.text(outputEl.text() + '>' + statement + '\n');
-                outputEl.text(outputEl.text() + doCommand(statement) + '\n');
+                outputEl.addText = function (str) {
+                    var re = new RegExp('\\n{'+paddingLines+'}$');
+                    return this.text(this.text().replace(re, '') +
+                                     str + '\n' + padding());
+                }
 
-                // Scroll to bottom of textarea
-                outputEl.scrollTop(-1 >>> 1);
+                outputEl.savedPadding = paddingLines;
+                outputEl.savedScrollHeight = outputEl[0].scrollHeight;
+                outputEl.scroll = function() {
+                    var previousPadding = this.savedPadding;
+                    var previousScrollHeight = this.savedScrollHeight;
+
+                    this.savedPadding = paddingLines;
+                    this.savedScrollHeight = this[0].scrollHeight;
+
+                    this.scrollTop(previousScrollHeight -
+                                   ((previousPadding + 1) * lineHeight));
+                }
+
+                var statement = $('#statement').val();
+                outputEl.addText('>' + statement);
+                outputEl.addText(doCommand(statement));
+
+                // Scroll to top of new output
+                outputEl.scroll();
 
                 $('#statement').val("");
 
