--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0022 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0023 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -221,7 +221,7 @@ Environment variables:
 
     <div id="appDiv">
         <div id="outputDiv" >
-            <textarea id=output ></textarea>
+            <textarea id=output readonly=readonly ></textarea>
         </div>
         <div id="commandDiv" >
             <textarea id=statement ></textarea>
