--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0023 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0024 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -30,7 +30,7 @@
             height: 16px;
         }
 
-        #output, #statement {
+        #output, #command {
             width: 100%;
             height: 100%;
         }
@@ -224,7 +224,7 @@ Environment variables:
             <textarea id=output readonly=readonly ></textarea>
         </div>
         <div id="commandDiv" >
-            <textarea id=statement ></textarea>
+            <textarea id=command ></textarea>
         </div>
     </div>
 
@@ -680,11 +680,11 @@ Environment variables:
                               doHelp('usage') + '\n' + padding());
 
             // Input textarea gets the default focus
-            $('#statement').focus();
+            $('#command').focus();
 
-            // Execute the statement in the "statement" text input
+            // Execute the command in the "command" text input
             // when [Enter] is pressed.
-            $('#statement').keypress(function(e) {
+            $('#command').keypress(function(e) {
                 // if not [return] key use default handler:
                 if (e.which != 13) return true;
 
@@ -709,14 +709,14 @@ Environment variables:
                                    ((previousPadding + 1) * lineHeight));
                 }
 
-                var statement = $('#statement').val();
-                outputEl.addText('>' + statement);
-                outputEl.addText(doCommand(statement));
+                var command = $('#command').val();
+                outputEl.addText('>' + command);
+                outputEl.addText(doCommand(command));
 
                 // Scroll to top of new output
                 outputEl.scroll();
 
-                $('#statement').val("");
+                $('#command').val("");
 
                 return false;
             });
