Remove extra blank line from long help.

--- a/todo.html
+++ b/todo.html
@@ -68,8 +68,7 @@
 
 See "help" for more details.</div>
 
-<div id=help>
-Actions:
+<div id=help>Actions:
   add "THING I NEED TO DO +project @context"
   a "THING I NEED TO DO +project @context"
     Adds THING I NEED TO DO to your todo.txt file on its own line.
