--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0024 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0025 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -640,8 +640,27 @@ Environment variables:
         jQuery(function() {
             var $ = jQuery; // local alias
 
+            var outputTextArea = $('#output');
+
+            outputTextArea.addText = function (text) {
+                var re = new RegExp('\\n{' + this.paddingLines + '}$');
+                return this.text(this.text().replace(re, '') +
+                                 text + '\n' + this.padding());
+            }
+
+            outputTextArea.scroll = function() {
+                var previousPadding      = this.savedPadding;
+                var previousScrollHeight = this.savedScrollHeight;
+
+                this.savedPadding      = this.paddingLines;
+                this.savedScrollHeight = this[0].scrollHeight;
+
+                this.scrollTop(previousScrollHeight -
+                        ((previousPadding + 1) * this.lineHeight));
+            }
+
             // Calculate how tall the textarea font is with a dummy textarea
-            var lineHeight = function () {
+            outputTextArea.lineHeight = function () {
                 var ta = $('<textarea rows=1 id=removeme></textarea>');
                 $('body').append(ta);
 
@@ -655,7 +674,7 @@ Environment variables:
 
             // Number of newlines in padding string. Automatically updated
             // when padding() constructs padding string.
-            var paddingLines = 0;
+            outputTextArea.paddingLines = 0;
 
             // Returns string of newlines used to force #output textarea's
             // scrollHeight to increase when a line is added. Also allows
@@ -663,20 +682,23 @@ Environment variables:
 
             // Computes a new string every time, in case the textarea was
             // resized.
-            var padding = function() {
+            outputTextArea.padding = function() {
                 var ret = "";
-                var paddingHeight = $('#output')[0].clientHeight;
 
-                paddingLines = Math.ceil(paddingHeight / lineHeight);
+                this.paddingLines = Math.ceil(this[0].clientHeight /
+                                              this.lineHeight);
 
-                for (var i = 0; i < paddingLines; i++) {
+                for (var i = 0; i < this.paddingLines; i++) {
                     ret += '\n';
                 }
                 return ret;
             };
 
-            $('#output').text(document.title + '\n\n' +
-                              doHelp('usage') + '\n' + padding());
+            // Initialize output textarea
+            outputTextArea.addText(document.title + '\n\n' +
+                                   doHelp('usage') + '\n');
+            outputTextArea.savedPadding = outputTextArea.paddingLines;
+            outputTextArea.savedScrollHeight = outputTextArea[0].scrollHeight;
 
             // Input textarea gets the default focus
             $('#command').focus();
@@ -687,33 +709,12 @@ Environment variables:
                 // if not [return] key use default handler:
                 if (e.which != 13) return true;
 
-                var outputEl = $('#output');
-
-                outputEl.addText = function (str) {
-                    var re = new RegExp('\\n{'+paddingLines+'}$');
-                    return this.text(this.text().replace(re, '') +
-                                     str + '\n' + padding());
-                }
-
-                outputEl.savedPadding = paddingLines;
-                outputEl.savedScrollHeight = outputEl[0].scrollHeight;
-                outputEl.scroll = function() {
-                    var previousPadding = this.savedPadding;
-                    var previousScrollHeight = this.savedScrollHeight;
-
-                    this.savedPadding = paddingLines;
-                    this.savedScrollHeight = this[0].scrollHeight;
-
-                    this.scrollTop(previousScrollHeight -
-                                   ((previousPadding + 1) * lineHeight));
-                }
-
                 var command = $('#command').val();
-                outputEl.addText('>' + command);
-                outputEl.addText(doCommand(command));
+                outputTextArea.addText('>' + command);
+                outputTextArea.addText(doCommand(command));
 
                 // Scroll to top of new output
-                outputEl.scroll();
+                outputTextArea.scroll();
 
                 $('#command').val("");
 
