--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0025 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0027 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -581,6 +581,77 @@ Environment variables:
     <script type="text/javascript">
         var DEBUG = false;
 
+        // Encapsulates functionality to display text output to a <textarea>
+        function OutputTextArea(jqObject)
+        {
+            /// Public Members ///
+
+            this.setText = function(text) {
+                return jqObject.text(text + padding());
+            }
+
+            this.addText = function(text) {
+                var re = new RegExp('\\n{' + paddingLines + '}$');
+                return this.setText(jqObject.text().replace(re, '') +
+                                    text + '\n');
+            }
+
+            this.scroll = function() {
+                var previousPadding      = savedPadding;
+                var previousScrollHeight = savedScrollHeight;
+
+                savedPadding      = paddingLines;
+                savedScrollHeight = jqObject[0].scrollHeight;
+
+                jqObject.scrollTop(previousScrollHeight -
+                                   ((previousPadding + 1) * lineHeight));
+            }
+
+
+            /// Private Members ///
+
+            // Calculate how tall the textarea font is using a dummy textarea
+            lineHeight = function () {
+                var ta = $('<textarea rows=1 id=removeme></textarea>');
+                $('body').append(ta);
+
+                var oldHeight = ta[0].scrollHeight;
+                ta.val('\n');
+                var newHeight = ta[0].scrollHeight;
+
+                $('#removeme').empty();
+                return newHeight - oldHeight;
+            }();
+
+            // Returns string of newlines used to force <textarea>'s
+            // scrollHeight to increase when a line is added. Also allows
+            // scrolling text to top even if textarea is not filled, yet.
+            // Computes a new string every time, in case the textarea was
+            // resized.
+            padding = function() {
+                var ret = "";
+
+                paddingLines = Math.floor(jqObject[0].clientHeight / lineHeight);
+
+                for (var i = 0; i < paddingLines; i++) {
+                    ret += '\n';
+                }
+                return ret;
+            };
+
+
+            /// Initialize private members ///
+
+            // Number of newlines in padding string. Automatically updated
+            // when padding() constructs padding string.
+            paddingLines = 0;
+
+            // Initialize output textarea
+            this.setText('');
+            savedPadding = paddingLines;
+            savedScrollHeight = jqObject[0].scrollHeight;
+        }
+
         function doHelp(id)
         {
             return $('#' + id).text();
@@ -608,97 +679,41 @@ Environment variables:
             return results;
         }
 
-        function doCommand(command)
-        {
-            var match  = command.match(/^\s*([^\s]+)\s*(.*)/)
-            var action = match[1].toLowerCase();
-            var args   = match[2];
-            var result = "";
-
-            if (DEBUG) {
-                result = 'action    = ' + action + '\n' +
-                         'args      = ' + args +   '\n';
-            }
-
-            if (action == "h") {
-                result += doHelp('usage') + '\n\n' + doHelp('shorthelp');
-            } else if (action == "help") {
-                result += doHelp('usage') + '\n\n' + doHelp('help');
-            } else if (action == "clear" || action == "clr" || action == "c") {
-                 setTimeout("$('#output').text('')", 0);
-            } else if (action == "js" || action == "j") {
-                result += doJavaScript(args);
-            } else {
-                // default to JavaScript
-                result += doJavaScript(command);
-            }
-
-            return result;
-        }
-
         // Run on document load
         jQuery(function() {
             var $ = jQuery; // local alias
 
-            var outputTextArea = $('#output');
-
-            outputTextArea.addText = function (text) {
-                var re = new RegExp('\\n{' + this.paddingLines + '}$');
-                return this.text(this.text().replace(re, '') +
-                                 text + '\n' + this.padding());
-            }
-
-            outputTextArea.scroll = function() {
-                var previousPadding      = this.savedPadding;
-                var previousScrollHeight = this.savedScrollHeight;
-
-                this.savedPadding      = this.paddingLines;
-                this.savedScrollHeight = this[0].scrollHeight;
-
-                this.scrollTop(previousScrollHeight -
-                        ((previousPadding + 1) * this.lineHeight));
-            }
-
-            // Calculate how tall the textarea font is with a dummy textarea
-            outputTextArea.lineHeight = function () {
-                var ta = $('<textarea rows=1 id=removeme></textarea>');
-                $('body').append(ta);
-
-                var oldHeight = ta[0].scrollHeight;
-                ta.val('\n');
-                var newHeight = ta[0].scrollHeight;
-
-                $('#removeme').empty();
-                return newHeight - oldHeight;
-            }();
-
-            // Number of newlines in padding string. Automatically updated
-            // when padding() constructs padding string.
-            outputTextArea.paddingLines = 0;
-
-            // Returns string of newlines used to force #output textarea's
-            // scrollHeight to increase when a line is added. Also allows
-            // scrolling text to top even if textarea is not filled, yet.
-
-            // Computes a new string every time, in case the textarea was
-            // resized.
-            outputTextArea.padding = function() {
-                var ret = "";
-
-                this.paddingLines = Math.ceil(this[0].clientHeight /
-                                              this.lineHeight);
-
-                for (var i = 0; i < this.paddingLines; i++) {
-                    ret += '\n';
-                }
-                return ret;
-            };
-
-            // Initialize output textarea
-            outputTextArea.addText(document.title + '\n\n' +
+            var outputTextArea = new OutputTextArea($('#output'));
+            outputTextArea.setText(document.title + '\n\n' +
                                    doHelp('usage') + '\n');
-            outputTextArea.savedPadding = outputTextArea.paddingLines;
-            outputTextArea.savedScrollHeight = outputTextArea[0].scrollHeight;
+            outputTextArea.scroll();
+
+            function doCommand(command) {
+                var match  = command.match(/^\s*([^\s]+)\s*(.*)/)
+                var action = match[1].toLowerCase();
+                var args   = match[2];
+                var result = "";
+
+                if (DEBUG) {
+                    result = 'action    = ' + action + '\n' +
+                             'args      = ' + args +   '\n';
+                }
+
+                if (action == "h") {
+                    result += doHelp('usage') + '\n\n' + doHelp('shorthelp');
+                } else if (action == "help") {
+                    result += doHelp('usage') + '\n\n' + doHelp('help');
+                } else if (action == "clear" || action == "clr" || action == "c") {
+                     outputTextArea.setText('');
+                } else if (action == "js" || action == "j") {
+                    result += doJavaScript(args);
+                } else {
+                    // default to JavaScript
+                    result += doJavaScript(command);
+                }
+
+                return result;
+            }
 
             // Input textarea gets the default focus
             $('#command').focus();
