--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0027 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0028 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -607,6 +607,13 @@ Environment variables:
                                    ((previousPadding + 1) * lineHeight));
             }
 
+            this.page = function (isPageUp) {
+                var scrollDistance = (isPageUp ? -1 : 1);
+                scrollDistance *= jqObject[0].clientHeight - 3*lineHeight;
+
+                jqObject.scrollTop(jqObject.scrollTop() + scrollDistance);
+            }
+
 
             /// Private Members ///
 
@@ -721,19 +728,27 @@ Environment variables:
 
             // Execute the command in the "command" text input
             // when [Enter] is pressed.
-            $('#command').keypress(function(e) {
-                // if not [return] key use default handler:
-                if (e.which != 13) return true;
+            $('#command').keydown(function(e) {
+                // Some keys have a special purpose:
+                switch (e.which) {
+                    case 13: // return
+                        var command = $('#command').val();
+                        outputTextArea.addText('>' + command);
+                        outputTextArea.addText(doCommand(command));
 
-                var command = $('#command').val();
-                outputTextArea.addText('>' + command);
-                outputTextArea.addText(doCommand(command));
+                        // Scroll to top of new output
+                        outputTextArea.scroll();
 
-                // Scroll to top of new output
-                outputTextArea.scroll();
-
-                $('#command').val("");
-
+                        $('#command').val("");
+                        break;
+                    case 33: // page up
+                    case 34: // page down
+                        outputTextArea.page(e.which == 33);
+                        break;
+                    default:
+                        return true;
+                        break;
+                    }
                 return false;
             });
         });
