--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v0.00.0028 by wonsungi@gmail.com</title>
+    <title>todo.html v0.00.0031 by wonsungi@gmail.com</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
@@ -660,6 +660,39 @@ Environment variables:
             savedScrollHeight = jqObject[0].scrollHeight;
         }
 
+        // Maintains command history.
+        function CommandTextArea(jqObject)
+        {
+            // Public Members //
+
+            this.add = function(command) {
+                if (command != commandHistory[place]) {
+                  place++;
+                  commandHistory.splice(place, 0, command);
+                }
+                place++;
+            }
+
+            this.clear = function() {
+                jqObject.val('');
+            }
+
+            this.history = function(goingUp) {
+                if (commandHistory.length == 0) return;
+                if (goingUp) {
+                    place = (place - 1 + commandHistory.length) %
+                            commandHistory.length;
+                } else {
+                    place = (place + 1 ) % commandHistory.length;
+                }
+                jqObject.val(commandHistory[place]);
+            }
+
+            // Private Members //
+            var place = 0;
+            var commandHistory = [];
+        }
+
         function doHelp(id)
         {
             return $('#' + id).text();
@@ -723,33 +756,52 @@ Environment variables:
                 return result;
             }
 
+            var commandTextArea = new CommandTextArea($('#command'));
+
             // Input textarea gets the default focus
             $('#command').focus();
 
-            // Execute the command in the "command" text input
-            // when [Enter] is pressed.
+            // Intercept newlines in #command <textarea>
+            $('#command').keypress(function(e) {
+                return (e.which != 13);
+            });
+
+            // Some keys have a special purpose:
             $('#command').keydown(function(e) {
-                // Some keys have a special purpose:
                 switch (e.which) {
-                    case 13: // return
-                        var command = $('#command').val();
-                        outputTextArea.addText('>' + command);
-                        outputTextArea.addText(doCommand(command));
+                  case 13: // return
+                    var command = $('#command').val();
 
-                        // Scroll to top of new output
-                        outputTextArea.scroll();
+                    commandTextArea.add(command);
 
-                        $('#command').val("");
-                        break;
-                    case 33: // page up
-                    case 34: // page down
-                        outputTextArea.page(e.which == 33);
-                        break;
-                    default:
-                        return true;
-                        break;
-                    }
-                return false;
+                    outputTextArea.addText('>' + command);
+                    outputTextArea.addText(doCommand(command));
+
+                    // Scroll to top of new output
+                    outputTextArea.scroll();
+
+                    $('#command').val("");
+                    break;
+
+                  case 33: // page up
+                  case 34: // page down
+                    outputTextArea.page(e.which == 33);
+                    break;
+
+                  case 38: // up
+                  case 40: // down
+                    commandTextArea.history(e.which == 38);
+                    break;
+
+                  case 27: // esc
+                    commandTextArea.clear();
+                    break;
+
+                  default:
+                    return true;
+                    break;
+               }
+               return false;
             });
         });
     </script>
