--- a/todo.html
+++ b/todo.html
@@ -41,8 +41,8 @@
     </style>
 </head>
 <body>
-    <div id='usage'>Usage: [-fhpantvV] [-d todo_config] action [task_number] [task_description]</div>
-    <div id='shorthelp'>Actions:
+    <pre id='usage'>Usage: [-fhpantvV] [-d todo_config] action [task_number] [task_description]</pre>
+    <pre id='shorthelp'>Actions:
   add|a "THING I NEED TO DO +project @context"
   addto DEST "TEXT TO ADD"
   addm "THINGS I NEED TO DO
@@ -66,9 +66,9 @@
   replace ITEM# "UPDATED TODO"
   report
 
-See "help" for more details.</div>
+See "help" for more details.</pre>
 
-<div id=help>Actions:
+<pre id=help>Actions:
   add "THING I NEED TO DO +project @context"
   a "THING I NEED TO DO +project @context"
     Adds THING I NEED TO DO to your todo.txt file on its own line.
@@ -216,7 +216,7 @@ Environment variables:
   TODOTXT_VERBOSE=1               is same as option -v
   TODOTXT_DEFAULT_ACTION=""       run this when called with no arguments
   TODOTXT_SORT_COMMAND="sort ..." customize list output
-  TODOTXT_FINAL_FILTER="sed ..."  customize list after color, P@+ hiding</div>
+  TODOTXT_FINAL_FILTER="sed ..."  customize list after color, P@+ hiding</pre>
 
     <div id="appDiv">
         <div id="outputDiv" >
